content/style/video.css
/*** video ***/

.videos-ops-box {
  overflow: hidden;
  height: 3rem;
  line-height: 3rem;
}

.videos-ops-box .video-op {
  background-position: 0 center;
  background-repeat: no-repeat;
  float: left;
  padding: 0 1.3rem 0 2rem;
  cursor: pointer;
}

.videos-ops-box .video-op label {
  cursor: pointer;
  -moz-user-select: none;
}

#selectAll-videos {
  background-image: url("images/checkbox.png");
  margin-left: 2rem;
  padding-left: 2.2rem;
}

#selectAll-videos[data-checked=true] {
  background-image: url("images/checkbox-checked.png");
}

#selectAll-videos[data-disabled=true] {
  color: #CCCCCC;
}

#selectAll-videos[data-disabled=true] > label {
  cursor: default;
}

#selectAll-videos[data-disabled=false]:hover {
  color: #00CAF2;
}

#selectAll-videos[data-disabled=false]:active {
  color: #018CAB;
}

#remove-videos {
  background-image: url("images/remove-default.png");
}

#remove-videos[data-disabled=true] {
  background-image: url("images/remove-disabled.png");
  cursor: default;
  color: #CCCCCC;
}

#remove-videos[data-disabled=true] > label {
  cursor: default;
}

#remove-videos[data-disabled=false]:hover {
  background-image: url("images/remove-highlighted.png");
  color: #00CAF2;
}

#remove-videos[data-disabled=false]:active {
  background-image: url("images/remove-selected.png");
  color: #018CAB;
}

#export-videos[data-disabled=true] {
  background-image: url("images/export-disabled.png");
  color: #CCCCCC;
  cursor: default;
}

#export-videos[data-disabled=false] {
  background-image: url("images/export-default.png");
}

#export-videos[data-disabled=true] > label {
  cursor: default;
}

#export-videos[data-disabled=false]:hover {
  background-image: url("images/export-highlighted.png");
  color: #00CAF2;
}

#export-videos[data-disabled=false]:active {
  background-image: url("images/export-selected.png");
  color: #018CAB;
}

#import-videos {
  background-image: url("images/import-default.png");
}

#import-videos[data-disabled=true] {
  background-image: url("images/import-disabled.png");
  cursor: default;
  color: #CCCCCC;
}

#import-videos[data-disabled=true] > label {
  cursor: default;
}

#import-videos[data-disabled=false]:hover {
  background-image: url("images/import-highlighted.png");
  color: #00CAF2;
}

#import-videos[data-disabled=false]:active {
  background-image: url("images/import-selected.png");
  color: #018CAB;
}

#refresh-videos {
  background-image: url("images/refresh-default.png");
}

#refresh-videos:hover {
  background-image: url("images/refresh-highlighted.png");
  color: #00CAF2;
}

#refresh-videos:active {
  background-image: url("images/refresh-selected.png");
  color: #018CAB;
}

#video-list-container {
  max-height: 46rem;
  overflow: auto;
  margin-bottom: 2rem;
}

.video-thread {
  margin-left: 1.8rem;
  height: 12rem;
  clear: both;
}

.video-thread .header {
  height: 2.2rem;
  width: 100%;
  margin-top: 0.4rem;
}

.video-thread[data-checked=false] label {
  background-image: url("images/checkbox.png");
  background-position: 0.2rem 0;
  background-repeat: no-repeat;
  display: inline-block;
}

.video-thread[data-checked=true] label {
  background-image: url("images/checkbox-checked.png");
  background-position: 0.2rem 0;
  background-repeat: no-repeat;
  display: inline-block;
}

.video-thread span {
  margin-left: 2.4rem;
}

.video-thread .body {
  clear: both;
  margin-left: 0.3rem;
}

.video-thread .body > div {
  position: relative;
  width: 10.6rem;
  height: 8.1rem;
  float: left;
}

.video-item {
  float: left;
  height: 7.8rem;
  width: 10.6rem;
}

.video-item:hover {
}

.video-thread .body >li {
  position: relative;
  width: 11.0rem;
  height: 8.2rem;
  overflow: hidden;
  display: inline-block;
}

.video-thread .body >li >img {
  width: 10.6rem;
  height: 7.8rem;
  border: 0.2rem white solid;
}

.video-thread li[data-checked=true] .item-check {
  width: 1.7rem;
  height: 1.7rem;
  position: absolute;
  left: 8.3rem;
  background-image: url("images/pic-checked.png");
  top: 1.0rem;
}

.video-thread li[data-checked=false] .item-check {
  width: 1.7rem;
  height: 1.7rem;
  position: absolute;
  left: 8.3rem;
  background-image: url("images/pic-unchecked.png");
  top: 1.0rem;
}

.video-thread .body img:hover {
  border: 0.2rem #00c8f0 solid;
}

.video-thread .body .video-item > img {
  width: 10.0rem;
  height: 7.5rem;
}

.video-thread .title > * {
  float: left;
}

#empty-video-container {
}

.empty-videos {
  background: url('images/empty-videos.png') no-repeat scroll center center transparent;
  height: 16rem;
  margin: 10rem 0 2rem;
}

.empty-videos-prompt {
  text-align: center;
}

.import-videos-btn-container {
  height: 4rem;
}

.import-videos {
  float: left;
  height: 2rem;
  width: 12rem;
  margin: 1rem 0 0 29.5rem;
  padding: 0.1rem 1rem;
}

